# BreadixChatTG

./: .gitignore  README.md  pyproject.toml
breadixchattg/: main.py
breadixchattg/core/: config.py
breadixchattg/handlers/: __init__.py  start.py
breadixchattg/pyrogram_tools/: __init__.py  client.py
