[tool.poetry]
name = "breadixchattg"
package-mode = false
version = "0.1.0"
description = ""
authors = ["noname33 <koalal1428@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.12.0"
pydantic-settings = "^2.4.0"
gspread-asyncio = "^2.0.0"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
google = "^3.0.0"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
loguru = "^0.7.2"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
asyncio-dgram = "^2.2.0"
aiohttp = "^3.10.5"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
